# GPU-Image-Processing-CUDA-Sobel-Edge-Detector

./: CMakeLists.txt  README.md
scripts/: build.sh  download_sample.sh  run_sample.sh
src/: main.cu  sobel.cu  sobel.h
